# rust-second-course

./: .env  Cargo.toml  docker-compose.yaml
scripts/: sql-init.sql
src/: main.rs
src/api/: customer_post_api.rs  mod.rs
src/database/: database.rs
src/models/: customer.rs
src/service/: customer_post.rs  mod.rs
